tests/negative/gold/export1-test.gold
tests/negative/export1-test.toit:6:8: error: Can't export prefix 'foo'
export foo
       ^~~
Compilation failed
